# RDKShell

./: CMakeLists.txt  LICENSE  NOTICE  README.md  animation.cpp  animation.h  animationutilities.cpp  animationutilities.h  apngutils.cpp  apngutils.h  application.h  compositorcontroller.cpp  compositorcontroller.h  compositorinfo.h  cursor.cpp  cursor.h  eastereggs.cpp  eastereggs.h  essosinstance.cpp  essosinstance.h  framebuffer.cpp  framebuffer.h  framebufferblitter.cpp  framebufferblitter.h  framebufferrenderer.cpp  framebufferrenderer.h  group.cpp  group.h  imageencoder.h  inputdevicetypes.h  inputevent.h  linuxinput.cpp  linuxinput.h  linuxkeys.cpp  linuxkeys.h  logger.cpp  logger.h  main.cpp  messageHandler.cpp  messageHandler.h  (+30 more)
client/: CMakeLists.txt  README.md  clientmessagehandler.cpp  clientmessagehandler.h  rdkshellchannel.cpp  rdkshellchannel.h  rdkshellclient.cpp  rdkshellclient.h  rdkshelleventlistener.h
client/test/: rdkshellclient.cpp  test_rdkshellclient.cpp
communication/: communicationfactory.cpp  communicationfactory.h  communicationhandler.h  communicationutils.cpp  communicationutils.h
communication/socket/: sockethandler.cpp  sockethandler.h
doc/: RdkShell.md
extensions/RdkShellClientControl/: CMakeLists.txt
extensions/RdkShellClientControl/protocol/: rdkshell_client_control.xml  rdkshell_client_control_protocol.c  rdkshell_client_control_protocol_server.h
extensions/RdkShellClientControl/source/: rdkshellclientcontrolmodule.cpp  rdkshellclientcontrolmodule.h
extensions/RdkShellExtendedInput/: CMakeLists.txt
extensions/RdkShellExtendedInput/protocol/: rdkshell_extended_input-protocol.c  rdkshell_extended_input-server-protocol.h  rdkshell_extended_input.xml
extensions/RdkShellExtendedInput/source/: rdkshellextendedinputmodule.cpp  rdkshellextendedinputmodule.h
extensions/RdkShellLink/: CMakeLists.txt  rdkshelllink.cpp  rdkshelllink.h
extensions/RdkShellRenderer/: CMakeLists.txt  rdkshellrenderer.cpp  rdkshellrenderer.h
extensions/RdkShellShell/: CMakeLists.txt
extensions/RdkShellShell/protocol/: rdkshell_shell.xml  rdkshell_shell_protocol.c  rdkshell_shell_protocol_server.h
extensions/RdkShellShell/source/: rdkshellshell.cpp
tests/: inputdevices.conf  llama_inputdevices.conf  testApi.sh  testRdkShellCI.sh  xi1_inputdevices.conf  xi6_inputdevices.conf
tests/ClientControlExtension/: CMakeLists.txt  clientcontrolextensiontest.cpp  rdkshellPermissions.conf
tests/ClientControlExtension/protocol/: rdkshell_client_control.xml  rdkshell_client_control_protocol_client.h
tests/MultipleDisplays/: CMakeLists.txt  multiple_displays.cpp
